services/go-nodejs-pet-id/go-usvc/openshift/step1/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-id-backend
  labels:
    app: pet-id-backend
    app.kubernetes.io/name: pet-id-backend
    app.kubernetes.io/part-of: pet-id
    component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pet-id-backend
  template:
    metadata:
      labels:
        app: pet-id-backend
    spec:
      containers:
      - name: pet-id-backend
        imagePullPolicy: Always
        image: quay.io/kenmoini/pet-id-backend:latest
        ports:
        - containerPort: 8080
          name: pet-id-backend
        volumeMounts:
          - name: config-yml
            mountPath: "/opt"
            readOnly: true
      volumes:
        - name: config-yml
          configMap:
            name: pet-id-backend-config-yml
            items:
              - key: "config.yml"
                path: "config.yml"
