services/go-nodejs-pet-id/go-usvc/openshift/step1/02-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    description: The PetID Backend REST Service
  labels:
    app: pet-id-backend
    app.kubernetes.io/name: pet-id-backend
    app.kubernetes.io/part-of: pet-id
    component: service
  name: pet-id-backend
spec:
  ports:
    - name: pet-id-backend
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: pet-id-backend
    component: pet-id-backend
  type: ClusterIP
